--- a/src/main/resources/fxml/loginScreen.fxml
+++ b/src/main/resources/fxml/loginScreen.fxml
@@ -6,14 +6,9 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-
 <?import de.jensd.fx.glyphs.fontawesome.*?>
 
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-
-<AnchorPane id="loginScreen" fx:id="loginScreen" prefHeight="610.0" prefWidth="652.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenUI">
+<AnchorPane id="loginScreen" fx:id="loginScreen" prefHeight="610.0" prefWidth="652.0" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenUI">
    <children>
       <TextField fx:id="txtFieldUsername" layoutX="227.0" layoutY="197.0" onAction="#login" prefHeight="53.0" prefWidth="374.0" promptText="Username">
          <font> <Font size="24.0" /> </font>
@@ -59,16 +54,17 @@
       </Label>
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="29.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="https://achieve.lausd.net/cms/lib/CA01000043/Centricity/domain/779/welligentbuttons/login.png" />
-         </image></ImageView>
+               <Image url="https://achieve.lausd.net/cms/lib/CA01000043/Centricity/domain/779/welligentbuttons/login.png" />
+         </image>
+      </ImageView>
 	        <ImageView fitHeight="45.0" fitWidth="46.0" layoutX="610.0" layoutY="550.0" pickOnBounds="true" preserveRatio="true">
-	          <image>
-	            <Image url="http://godiaperfree.com/wp-content/uploads/checkmark-300x300.png" />
-	          </image>
+   <image>
+   	            <Image url="http://godiaperfree.com/wp-content/uploads/checkmark-300x300.png" />
+   </image>
 	        </ImageView>
       <FontAwesomeIconView glyphName="USER" layoutX="88.0" layoutY="210.0" size="50" text="" />
       <FontAwesomeIconView glyphName="KEY" layoutX="81.0" layoutY="287.0" size="50" text="" />
-      <AnchorPane id="paneRegister" fx:id="paneRegister" layoutX="-1.0" layoutY="350.0" prefHeight="257.0" prefWidth="653.0" visible="false">
+      <AnchorPane id="paneRegister" fx:id="paneRegister" layoutX="-1.0" layoutY="350.0" prefHeight="196.0" prefWidth="653.0" visible="false">
          <children>
             <FontAwesomeIconView glyphName="KEY" layoutX="85.0" layoutY="15.0" size="50" />
             <TextField fx:id="txtFieldEmail" layoutX="227.0" layoutY="68.0" prefHeight="51.0" prefWidth="374.0" promptText="Email">
