--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -6,13 +6,8 @@
 	-fx-red: #FF0000;
 	-fx-green: #5cf442;
 }
-
+/*########### STYLING LOGIN SCREEN ########## */
 #loginScreen{
-	-fx-background-color: -fx-primary;
-  	-fx-background-radius: 10 10 0 0;
-}
-
-#mainAppID{
 	-fx-background-color: -fx-primary;
 }
 
@@ -32,69 +27,70 @@
 	-fx-font-size: 40px;
 }
 
-#txtFieldUsername{
-	-fx-text-fill: black;
-    -fx-border-width: 1;
+#txtFieldUsername, #passwordFieldPassword, #passwordFieldReType, #txtFieldEmail{
+	-fx-text-fill: -fx-primarytext;
+	-fx-font-size: 30px;
+	-jfx-focus-color: -fx-secondary;
 }
 
 .label{
 	-fx-text-fill: #e8e8e8;
 }
 
-#btnLogin{
-	-fx-background-color: #A1B56C;
+#txtFieldError{
+	-fx-background-color: -fx-primary;
 }
 
-#btnRegister{
-	-fx-background-color: #F7CA88;
+#btnLogin, #btnRegister, #btnCancelRegistration{
+	-fx-text-fill: -fx-primarytext;
+	-fx-background-color: -fx-primary;
+	-fx-border-color: -fx-secondary;
+	-fx-border-radius: 20px;
+	-fx-background-radius: 20px;
 }
 
-#btnLogin:hover, #btnRegister:hover{
-	-fx-text-fill: white;
+#btnLogin:hover, #btnRegister:hover, #btnCancelRegistration:hover{
+	-fx-background-color: -fx-secondary;
+	-fx-border-color: -fx-secondary;
+	-fx-text-fill: -fx-primary;
+}
+/* ########## MainApp Styling ############# */
+#mainAppID{
+	-fx-background-color: -fx-primary;
 }
 
-#btnCancelRegistration{
-	-fx-background-color: #AB4642;
+/* Styling the Menu bar */
+.menu-bar{
+	-fx-base: -fx-primary;
+	-fx-background-color: -fx-primary;
+}
+.context-menu{
+	-fx-background-color: derive(-fx-primary, 20%);
 }
 
-#btnCancelRegistration:hover{
-	-fx-text-fill: white;
+.table-view{
+	-fx-background-color: -fx-primarytext;
 }
 
-#Menu{
-	-fx-background-color: #86C1B9;
-	-fx-text-fill: #181818;
-	-fx-background-radius: 0 0 10 10;
+.table-view .column-header .label {
+    -fx-text-fill: -fx-primarytext;
+    -fx-font-weight: bold;
+    -fx-background-color: derive(-fx-primary, 10%);
 }
 
-#btnAddProject, #btnAddTask, #assignUser{
-	-fx-background-color: #A1B56C;
-	-fx-text-fill: white;
+
+/* Styling add and remove button on the MainApp */
+.button{
+	-fx-text-fill: -fx-primarytext;
+	-fx-background-color: -fx-primary;
+	-fx-border-color: -fx-secondary;
+	-fx-border-radius: 20px;
+	-fx-background-radius: 20px;
 }
 
-#btnAddProject:hover, #btnAddTask:hover, #assignUser:hover{
-	-fx-text-fill: black;
-}
-
-#btnRemoveProject, #btnRemoveTask, #removeUser{
-	-fx-background-color: #AB4642;
-	-fx-text-fill: white;
-}
-
-#btnRemoveProject:hover, #btnRemoveTask:hover, #removeUser:hover{
-	-fx-text-fill: black;
-}
-
-#btnSearch{
-	-fx-background-color: #DC9656;
-	-fx-text-fill: white;
-}
-
-#btnSearch:hover{
-	-fx-text-fill: black;
-}
-
-#btnSearchMore{
-	-fx-background-color: #BA8BAF;
+.button:hover{
+	-fx-background-color: -fx-secondary;
+	-fx-border-color: -fx-secondary;
+	-fx-text-fill: -fx-primary;
 }
 
