--- a/src/main/resources/fxml/loginScreen.fxml
+++ b/src/main/resources/fxml/loginScreen.fxml
@@ -1,64 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="loginScreen" fx:id="loginScreen" prefHeight="701.0" prefWidth="652.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenUI">
+<AnchorPane id="loginScreen" fx:id="loginScreen" prefHeight="692.0" prefWidth="652.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenUI">
    <children>
-      <TextField fx:id="txtFieldUsername" layoutX="149.0" layoutY="167.0" onAction="#login" prefHeight="53.0" prefWidth="374.0" promptText="Username">
-         <font>
-            <Font size="24.0" />
-         </font>
-         <effect>
-            <DropShadow blurType="GAUSSIAN" color="#383838" />
-         </effect></TextField>
-      <PasswordField fx:id="passwordFieldPassword" layoutX="149.0" layoutY="245.0" onAction="#login" prefHeight="53.0" prefWidth="374.0" promptText="Password">
-         <font>
-            <Font size="24.0" />
-         </font>
-         <effect>
-            <DropShadow blurType="GAUSSIAN" />
-         </effect></PasswordField>
-      <Button id="btnLogin" fx:id="btnLogin" layoutX="344.0" layoutY="616.0" mnemonicParsing="false" onAction="#login" prefHeight="51.0" prefWidth="122.0" text="Login">
-         <font>
-            <Font size="24.0" />
-         </font>   
-         
-      </Button>
-      <TextField fx:id="txtFieldError" layoutX="186.0" layoutY="549.0" prefHeight="50.0" prefWidth="280.0" style="-fx-text-fill: red; -fx-background-color: white;">
+      <TextField fx:id="txtFieldError" layoutX="134.0" layoutY="132.0" prefHeight="40.0" prefWidth="397.0" style="-fx-text-fill: red;">
           <font>
-              <Font size="12.0" />
-          </font>
-         <effect>
-            <DropShadow />
-         </effect></TextField>
-      <Button id="btnRegister" fx:id="btnRegister" layoutX="186.0" layoutY="616.0" mnemonicParsing="false" onAction="#register" prefHeight="51.0" prefWidth="122.0" text="Register">
-         <font>
-            <Font size="24.0" />
-         </font></Button>
-      <FontAwesomeIconView glyphName="USER" layoutX="88.0" layoutY="210.0" size="50" text="" />
-      <FontAwesomeIconView glyphName="KEY" layoutX="81.0" layoutY="287.0" size="50" text="" />
+              <Font size="14.0" />
+          </font></TextField>
+      <FontAwesomeIconView glyphName="USER" layoutX="102.0" layoutY="207.0" size="40" text="" />
+      <FontAwesomeIconView glyphName="KEY" layoutX="96.0" layoutY="285.0" size="40" text="" />
       <AnchorPane id="paneRegister" fx:id="paneRegister" layoutX="-1.0" layoutY="350.0" prefHeight="257.0" prefWidth="653.0" visible="false">
          <children>
-            <PasswordField fx:id="passwordFieldReType" layoutX="150.0" layoutY="-25.0" onAction="#login" prefHeight="53.0" prefWidth="374.0" promptText="Re-Type Password">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </PasswordField>
-            <FontAwesomeIconView glyphName="KEY" layoutX="85.0" layoutY="15.0" size="50" />
-            <TextField fx:id="txtFieldEmail" layoutX="150.0" layoutY="53.0" prefHeight="53.0" prefWidth="374.0">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </TextField>
-            <FontAwesomeIconView glyphName="ENVELOPE" layoutX="85.0" layoutY="95.0" size="50" />
-             <Button fx:id="btnCancelRegistration" layoutX="185.0" layoutY="130.0" mnemonicParsing="false" onAction="#cancelRegistration" prefHeight="45.0" prefWidth="280.0" text="Cancel Registration">
+            <JFXPasswordField fx:id="passwordFieldReType" layoutX="150.0" layoutY="-25.0" onAction="#login" prefHeight="53.0" prefWidth="374.0" promptText="Re-Type Password" />
+            <FontAwesomeIconView glyphName="KEY" layoutX="98.0" layoutY="10.0" size="40" />
+            <JFXTextField fx:id="txtFieldEmail" layoutX="150.0" layoutY="53.0" prefHeight="53.0" prefWidth="374.0" promptText="Email" />
+            <FontAwesomeIconView glyphName="ENVELOPE" layoutX="98.0" layoutY="90.0" size="40" />
+             <Button fx:id="btnCancelRegistration" layoutX="185.0" layoutY="170.0" mnemonicParsing="false" onAction="#cancelRegistration" prefHeight="45.0" prefWidth="280.0" text="Cancel Registration">
              <font>
                  <Font size="20.0" />
              </font></Button>
@@ -81,5 +48,25 @@
             <DropShadow color="#7d8345" />
          </effect>
       </Label>
+      <JFXButton fx:id="btnRegister" buttonType="RAISED" layoutX="149.0" layoutY="595.0" onAction="#register" prefHeight="65.0" prefWidth="122.0" text="Register">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="btnLogin" buttonType="RAISED" layoutX="401.0" layoutY="595.0" onAction="#login" prefHeight="65.0" prefWidth="122.0" text="Login">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </JFXButton>
+      <JFXTextField fx:id="txtFieldUsername" layoutX="149.0" layoutY="162.0" onAction="#login" prefHeight="58.0" prefWidth="374.0" promptText="Username">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </JFXTextField>
+      <JFXPasswordField fx:id="passwordFieldPassword" layoutX="149.0" layoutY="245.0" onAction="#login" prefHeight="53.0" prefWidth="374.0" promptText="Password">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </JFXPasswordField>
    </children>
 </AnchorPane>
