--- a/src/main/resources/fxml/mainAppUI.fxml
+++ b/src/main/resources/fxml/mainAppUI.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Menu?>
@@ -13,8 +14,9 @@
 <?import javafx.scene.control.cell.TextFieldTableCell?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainAppID" minHeight="632.0" prefHeight="716.0" prefWidth="1091.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MainAppUI">
+<AnchorPane fx:id="mainAppID" minHeight="632.0" prefHeight="753.0" prefWidth="1091.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MainAppUI">
    <children>
       <MenuBar fx:id="Menu" layoutY="2.0">
         <menus>
@@ -72,8 +74,14 @@
               </TableColumn>
           </columns>
       </TableView>
-      <Button fx:id="assignUser" layoutX="604.0" layoutY="652.0" mnemonicParsing="false" onAction="#assignUser" prefHeight="37.0" prefWidth="105.0" text="Assign User" />
-      <Button fx:id="removeUser" layoutX="720.0" layoutY="652.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="105.0" text="Remove" />
+      <Button fx:id="assignUser" alignment="BOTTOM_CENTER" layoutX="604.0" layoutY="652.0" mnemonicParsing="false" onAction="#assignUser" prefHeight="79.0" prefWidth="105.0" text="Assign User">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="removeUser" alignment="BOTTOM_CENTER" layoutX="720.0" layoutY="652.0" mnemonicParsing="false" prefHeight="79.0" prefWidth="105.0" text="Remove">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
       <TableView fx:id="tableViewTasks" editable="true" layoutX="318.0" layoutY="63.0" prefHeight="446.0" prefWidth="251.0" userData="tasks">
         <columns>
           <TableColumn fx:id="columnTaskName" onEditCommit="#updateName" prefWidth="200.0" text="Task Name">
@@ -95,12 +103,41 @@
         </columns>
       </TableView>
       <TextField fx:id="txtFieldSearch" layoutX="861.0" layoutY="540.0" onInputMethodTextChanged="#search" prefHeight="37.0" prefWidth="202.0" />
-      <Button fx:id="btnSearch" alignment="CENTER" layoutX="861.0" layoutY="652.0" mnemonicParsing="false" onAction="#search" prefHeight="37.0" prefWidth="99.0" text="Search" />
-      <Button layoutX="964.0" layoutY="601.0" mnemonicParsing="false" onAction="#getUsers" prefHeight="88.0" prefWidth="99.0" text="Show Users (May be slow)" textAlignment="CENTER" wrapText="true" />
-      <Button id="btnAddProject" layoutX="32.0" layoutY="652.0" mnemonicParsing="false" onAction="#addProject" prefHeight="37.0" prefWidth="105.0" text="Add Project" />
-      <Button fx:id="btnRemoveProject" alignment="CENTER" disable="true" layoutX="143.0" layoutY="652.0" mnemonicParsing="false" onAction="#removeProject" prefHeight="37.0" prefWidth="135.0" text="Remove Project" />
-      <Button fx:id="btnAddTask" alignment="CENTER_RIGHT" layoutX="318.0" layoutY="652.0" mnemonicParsing="false" onAction="#addTask" text="Add Task" />
-      <Button fx:id="btnRemoveTask" alignment="CENTER" disable="true" layoutX="449.0" layoutY="652.0" mnemonicParsing="false" onAction="#removeTask" prefHeight="37.0" prefWidth="120.0" text="Remove Task" />
+      <Button fx:id="btnSearch" alignment="BOTTOM_CENTER" layoutX="861.0" layoutY="652.0" mnemonicParsing="false" onAction="#search" prefHeight="79.0" prefWidth="99.0" text="Search">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button layoutX="978.0" layoutY="652.0" mnemonicParsing="false" onAction="#getUsers" prefHeight="79.0" prefWidth="99.0" text="Show Users (May be slow)" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button id="btnAddProject" alignment="BOTTOM_CENTER" layoutX="32.0" layoutY="652.0" mnemonicParsing="false" onAction="#addProject" prefHeight="79.0" prefWidth="120.0" text="Add Project">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="btnRemoveProject" alignment="BOTTOM_CENTER" disable="true" layoutX="158.0" layoutY="652.0" mnemonicParsing="false" onAction="#removeProject" prefHeight="79.0" prefWidth="120.0" text="Remove Project">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="btnAddTask" alignment="BOTTOM_CENTER" layoutX="318.0" layoutY="652.0" mnemonicParsing="false" onAction="#addTask" prefHeight="79.0" prefWidth="120.0" text="Add Task">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="btnRemoveTask" alignment="BOTTOM_CENTER" disable="true" layoutX="449.0" layoutY="652.0" mnemonicParsing="false" onAction="#removeTask" prefHeight="79.0" prefWidth="120.0" text="Remove Task">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <FontAwesomeIconView glyphName="CLIPBOARD" layoutX="96.0" layoutY="692.0" size="30" />
+      <FontAwesomeIconView glyphName="CLIPBOARD" layoutX="220.0" layoutY="691.0" size="30" />
+      <FontAwesomeIconView glyphName="TASKS" layoutX="378.0" layoutY="691.0" size="30" />
+      <FontAwesomeIconView glyphName="USER" layoutX="643.0" layoutY="692.0" size="30" />
+      <FontAwesomeIconView glyphName="USER" layoutX="762.0" layoutY="691.0" size="30" />
+      <FontAwesomeIconView glyphName="PLUS" layoutX="61.0" layoutY="691.0" size="30" />
+      <FontAwesomeIconView glyphName="MINUS" layoutX="186.0" layoutY="692.0" size="30" />
+      <FontAwesomeIconView glyphName="PLUS" layoutX="344.0" layoutY="691.0" size="30" text="" />
+      <FontAwesomeIconView glyphName="TASKS" layoutX="509.0" layoutY="690.0" size="30" />
+      <FontAwesomeIconView glyphName="MINUS" layoutX="475.0" layoutY="691.0" size="30" />
+      <FontAwesomeIconView glyphName="SEARCH" layoutX="897.0" layoutY="692.0" size="30" />
    </children>
    <effect>
       <DropShadow radius="9.940000000000001" spread="0.52" width="20.76" />
