--- a/src/main/resources/fxml/mainAppUI.fxml
+++ b/src/main/resources/fxml/mainAppUI.fxml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.control.cell.TextFieldTableCell?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-
-<AnchorPane fx:id="mainAppID" minHeight="632.0" prefHeight="753.0" prefWidth="1091.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MainAppUI">
+<AnchorPane fx:id="mainAppID" minHeight="632.0" prefHeight="753.0" prefWidth="1091.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MainAppUI">
    <children>
       <MenuBar fx:id="Menu" layoutY="2.0">
         <menus>
@@ -67,18 +57,18 @@
             <TextArea fx:id="txtAreaTaskDesc" editable="false" layoutX="40.0" layoutY="81.0" prefHeight="88.0" prefWidth="251.0" promptText="Task Description" />
          </children>
       </AnchorPane>
-      <TableView fx:id="tableViewUsers" editable="true" layoutX="604.0" layoutY="63.0" prefHeight="446.0" prefWidth="221.0" userData="users">
+      <TableView fx:id="tableViewUsersToProject" editable="true" layoutX="604.0" layoutY="63.0" prefHeight="446.0" prefWidth="110.0" userData="users">
           <columns>
-              <TableColumn prefWidth="220" text="Assigned Users">
+              <TableColumn prefWidth="110.0" text="To Project">
                   <cellValueFactory><PropertyValueFactory property="name" /> </cellValueFactory>
               </TableColumn>
           </columns>
       </TableView>
-      <Button fx:id="assignUser" alignment="BOTTOM_CENTER" layoutX="604.0" layoutY="652.0" mnemonicParsing="false" onAction="#assignUser" prefHeight="79.0" prefWidth="105.0" text="Assign User">
+      <Button alignment="CENTER" layoutX="607.0" layoutY="538.0" mnemonicParsing="false" onAction="#assignUserToProject" prefHeight="79.0" prefWidth="105.0" text="Assign User To Project" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button fx:id="removeUser" alignment="BOTTOM_CENTER" layoutX="720.0" layoutY="652.0" mnemonicParsing="false" prefHeight="79.0" prefWidth="105.0" text="Remove">
+      <Button fx:id="removeUser" alignment="CENTER" contentDisplay="CENTER" layoutX="734.0" layoutY="538.0" mnemonicParsing="false" onAction="#removeUserFromProject" prefHeight="79.0" prefWidth="105.0" text="Remove User From Project" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="14.0" />
          </font></Button>
@@ -127,17 +117,36 @@
          <font>
             <Font size="14.0" />
          </font></Button>
-      <FontAwesomeIconView glyphName="CLIPBOARD" layoutX="96.0" layoutY="692.0" size="30" />
-      <FontAwesomeIconView glyphName="CLIPBOARD" layoutX="220.0" layoutY="691.0" size="30" />
-      <FontAwesomeIconView glyphName="TASKS" layoutX="378.0" layoutY="691.0" size="30" />
-      <FontAwesomeIconView glyphName="USER" layoutX="643.0" layoutY="692.0" size="30" />
-      <FontAwesomeIconView glyphName="USER" layoutX="762.0" layoutY="691.0" size="30" />
-      <FontAwesomeIconView glyphName="PLUS" layoutX="61.0" layoutY="691.0" size="30" />
-      <FontAwesomeIconView glyphName="MINUS" layoutX="186.0" layoutY="692.0" size="30" />
-      <FontAwesomeIconView glyphName="PLUS" layoutX="344.0" layoutY="691.0" size="30" text="" />
-      <FontAwesomeIconView glyphName="TASKS" layoutX="509.0" layoutY="690.0" size="30" />
-      <FontAwesomeIconView glyphName="MINUS" layoutX="475.0" layoutY="691.0" size="30" />
-      <FontAwesomeIconView glyphName="SEARCH" layoutX="897.0" layoutY="692.0" size="30" />
+      <FontAwesomeIconView disable="true" glyphName="CLIPBOARD" layoutX="96.0" layoutY="692.0" size="30" />
+      <FontAwesomeIconView disable="true" glyphName="CLIPBOARD" layoutX="220.0" layoutY="691.0" size="30" />
+      <FontAwesomeIconView disable="true" glyphName="TASKS" layoutX="378.0" layoutY="691.0" size="30" />
+      <FontAwesomeIconView disable="true" glyphName="USER" layoutX="643.0" layoutY="692.0" size="30" />
+      <FontAwesomeIconView disable="true" glyphName="USER" layoutX="762.0" layoutY="691.0" size="30" />
+      <FontAwesomeIconView disable="true" glyphName="PLUS" layoutX="61.0" layoutY="691.0" size="30" />
+      <FontAwesomeIconView disable="true" glyphName="MINUS" layoutX="186.0" layoutY="692.0" size="30" />
+      <FontAwesomeIconView disable="true" glyphName="PLUS" layoutX="344.0" layoutY="691.0" size="30" text="" />
+      <FontAwesomeIconView disable="true" glyphName="TASKS" layoutX="509.0" layoutY="690.0" size="30" />
+      <FontAwesomeIconView disable="true" glyphName="MINUS" layoutX="475.0" layoutY="691.0" size="30" />
+      <FontAwesomeIconView disable="true" glyphName="SEARCH" layoutX="897.0" layoutY="692.0" size="30" />
+      <TableView fx:id="tableViewUsersToTask" editable="true" layoutX="731.0" layoutY="63.0" prefHeight="446.0" prefWidth="110.0" userData="users">
+         <columns>
+            <TableColumn prefWidth="110.0" text="To Task">
+               <cellValueFactory>
+                  <PropertyValueFactory property="name" />
+               </cellValueFactory>
+            </TableColumn>
+         </columns>
+      </TableView>
+      <Button alignment="CENTER" layoutX="607.0" layoutY="652.0" mnemonicParsing="false" onAction="#assignUserToTask" prefHeight="79.0" prefWidth="105.0" text="Assign User To Task" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="734.0" layoutY="652.0" mnemonicParsing="false" onAction="#removeUserFromTask" prefHeight="79.0" prefWidth="105.0" text="Remove User From Task" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
    <effect>
       <DropShadow radius="9.940000000000001" spread="0.52" width="20.76" />
